--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -9,6 +9,7 @@ androidxFragment = "1.5.7"
 androidxLifecycle = "2.6.1"
 androidxNavigation = "2.5.3"
 androidxConstraintlayout = "2.1.4"
+androidXPreference = "1.2.0"
 material3 = "1.9.0"
 lottie = "6.0.0"
 junit4 = "4.13.2"
@@ -28,6 +29,7 @@ androidx-lifecycle-viewmodel-ktx = { group = "androidx.lifecycle", name = "lifec
 androidx-lifecycle-viewmodel-savedstate = { group = "androidx.lifecycle", name = "lifecycle-viewmodel-savedstate", version.ref = "androidxLifecycle" }
 androidx-lifecycle-common-java8 = { group = "androidx.lifecycle", name = "lifecycle-common-java8", version.ref = "androidxLifecycle" }
 androidx-constraintlayout = { group = "androidx.constraintlayout", name = "constraintlayout", version.ref = "androidxConstraintlayout" }
+androidx-preference = { group = "androidx.preference", name = "preference-ktx", version.ref = "androidXPreference" }
 material3 = { group = "com.google.android.material", name = "material", version.ref = "material3" }
 lottie = { group = "com.airbnb.android", name = "lottie", version.ref = "lottie" }
 junit4 = { group = "junit", name = "junit", version.ref = "junit4" }
@@ -38,3 +40,4 @@ androidx-test-espresso-core = { group = "androidx.test.espresso", name = "espres
 kotlin-android = { id = "org.jetbrains.kotlin.android", version.ref = "kotlin" }
 android-application = { id = "com.android.application", version.ref = "gradle" }
 android-library = { id = "com.android.library", version.ref = "gradle" }
+androidx-navigation-safeargs = { id = "androidx.navigation.safeargs.kotlin", version.ref = "androidxNavigation" }
