--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -10,6 +10,7 @@ androidxLifecycle = "2.6.1"
 androidxNavigation = "2.5.3"
 androidxConstraintlayout = "2.1.4"
 androidXPreference = "1.2.0"
+hilt = "2.45"
 material3 = "1.9.0"
 lottie = "6.0.0"
 junit4 = "4.13.2"
@@ -30,6 +31,9 @@ androidx-lifecycle-viewmodel-savedstate = { group = "androidx.lifecycle", name =
 androidx-lifecycle-common-java8 = { group = "androidx.lifecycle", name = "lifecycle-common-java8", version.ref = "androidxLifecycle" }
 androidx-constraintlayout = { group = "androidx.constraintlayout", name = "constraintlayout", version.ref = "androidxConstraintlayout" }
 androidx-preference = { group = "androidx.preference", name = "preference-ktx", version.ref = "androidXPreference" }
+hilt-android = { group = "com.google.dagger", name = "hilt-android", version.ref = "hilt" }
+hilt-android-testing = { group = "com.google.dagger", name = "hilt-android-testing", version.ref = "hilt" }
+hilt-compiler = { group = "com.google.dagger", name = "hilt-android-compiler", version.ref = "hilt" }
 material3 = { group = "com.google.android.material", name = "material", version.ref = "material3" }
 lottie = { group = "com.airbnb.android", name = "lottie", version.ref = "lottie" }
 junit4 = { group = "junit", name = "junit", version.ref = "junit4" }
@@ -41,3 +45,4 @@ kotlin-android = { id = "org.jetbrains.kotlin.android", version.ref = "kotlin" }
 android-application = { id = "com.android.application", version.ref = "gradle" }
 android-library = { id = "com.android.library", version.ref = "gradle" }
 androidx-navigation-safeargs = { id = "androidx.navigation.safeargs.kotlin", version.ref = "androidxNavigation" }
+hilt = { id = "com.google.dagger.hilt.android", version.ref = "hilt" }
