--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -10,6 +10,7 @@ androidxLifecycle = "2.6.1"
 androidxNavigation = "2.5.3"
 androidxConstraintlayout = "2.1.4"
 androidXPreference = "1.2.0"
+androidXRoom = "2.5.1"
 hilt = "2.45"
 material3 = "1.9.0"
 lottie = "6.0.0"
@@ -31,6 +32,9 @@ androidx-lifecycle-viewmodel-savedstate = { group = "androidx.lifecycle", name =
 androidx-lifecycle-common-java8 = { group = "androidx.lifecycle", name = "lifecycle-common-java8", version.ref = "androidxLifecycle" }
 androidx-constraintlayout = { group = "androidx.constraintlayout", name = "constraintlayout", version.ref = "androidxConstraintlayout" }
 androidx-preference = { group = "androidx.preference", name = "preference-ktx", version.ref = "androidXPreference" }
+androidx-room-compiler = { group = "androidx.room", name = "room-compiler", version.ref = "androidXRoom" }
+androidx-room-runtime = { group = "androidx.room", name = "room-runtime", version.ref = "androidXRoom" }
+androidx-room-ktx = { group = "androidx.room", name = "room-ktx", version.ref = "androidXRoom" }
 hilt-android = { group = "com.google.dagger", name = "hilt-android", version.ref = "hilt" }
 hilt-android-testing = { group = "com.google.dagger", name = "hilt-android-testing", version.ref = "hilt" }
 hilt-compiler = { group = "com.google.dagger", name = "hilt-android-compiler", version.ref = "hilt" }
