--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -16,6 +16,7 @@ androidXSecurityKtx = "1.1.0-alpha06"
 hilt = "2.45"
 material3 = "1.9.0"
 lottie = "6.0.0"
+once = "1.3.1"
 junit4 = "4.13.2"
 androidxTestJunit = "1.1.5"
 androidxEspresso = "3.5.1"
@@ -44,6 +45,7 @@ hilt-android-testing = { group = "com.google.dagger", name = "hilt-android-testi
 hilt-compiler = { group = "com.google.dagger", name = "hilt-android-compiler", version.ref = "hilt" }
 material3 = { group = "com.google.android.material", name = "material", version.ref = "material3" }
 lottie = { group = "com.airbnb.android", name = "lottie", version.ref = "lottie" }
+once = { group = "com.jonathanfinerty.once", name = "once", version.ref = "once" }
 junit4 = { group = "junit", name = "junit", version.ref = "junit4" }
 androidx-test-ext-junit = { group = "androidx.test.ext", name = "junit", version.ref = "androidxTestJunit" }
 androidx-test-espresso-core = { group = "androidx.test.espresso", name = "espresso-core", version.ref = "androidxEspresso" }
